<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Text Fiction</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="apprater_title">Rate this app?</string>
	<string name="apprater_message">Hi,\nseems like you find this app useful. Would you consider rating it? This will only take a minute of your time, but encourages further development.</string>
	<string name="apprater_positive">Sure!</string>
	<string name="apprater_negative">No thanks</string>
	<string name="apprater_neutral">Later</string>
	<string name="msg_corrupt_z">Corrupt game file</string>
	<string name="title_activity_game">GameActivity</string>
	<string name="msg_what_next">What next?</string>
	<string name="cmd_user0">look</string>
	<string name="cmd_user1">examine</string>
	<string name="cmd_user2">read</string>
	<string name="cmd_user3">yes</string>
	<string name="cmd_user4">no</string>
	<string name="cmd_user5">open</string>
	<string name="cmd_user6">close</string>
	<string name="cmd_user7">inventory</string>
	<string name="cmd_user8">get</string>
	<string name="cmd_user9">drop</string>
	<string name="cmd_user10">take all</string>
	<string name="cmd_user11">wait</string>
	<string name="cmd_user12">use</string>
	<string name="cmd_user13">again</string>
	<string name="msg_no_cmd">Can\'t bind empty commandline to button!</string>
	<string name="mi_add">Add</string>
	<string name="title_really_delete">Really delete?</string>
	<string name="msg_empty_library">Your library is currently empty! To add games, select \'Browse Catalog\' from the menu. Use \'Import\' if your browser does not hand over your downloads automatically.</string>
	<string name="mi_save">Save</string>
	<string name="mi_restore">Restore</string>
	<string name="mi_restart">Restart</string>
	<string name="mi_browse">Browse Catalog</string>
	<string name="catalog_url">http://www.onyxbits.de/textfiction/games</string>
	<string name="help_url">http://www.onyxbits.de/textfiction/help</string>
	<string name="mi_import">Import</string>
	<string name="title_select_import">Select games to import</string>
	<string name="msg_failure_import">Failure!</string>
	<string name="msg_nothing_to_import">No games found in the download folder!</string>
	<string name="mi_clear_log">Clear</string>
	<string name="cb_at_once">Execute at once</string>
	<string name="mi_help">Help</string>
	<string name="mi_settings">Settings</string>
	<string name="status_score">%1$s\nScore: %2$d Turn: %3$d</string>
	<string name="status_time">%1$s\n%2$s</string>
	<string name="title_change_commmand">Edit Commmand Button</string>
	<string name="msg_corrupt_game_file">Corrupt game file</string>
	<string name="mi_flip_view">Flip view</string>
	<string name="title_please_confirm">Please confirm</string>
	<string name="msg_really_restart">Really restart the game?</string>
	<string name="title_restore_game">Restore game</string>
	<string name="msg_no_savegames">No savegames available</string>
	<string name="msg_game_restored">Game restored</string>
	<string name="msg_restore_failed">Restore failed</string>
	<string name="title_save_game">Save game</string>
	<string name="msg_game_saved">Game saved</string>
	<string name="msg_no_webbrowser">No webbrowser found!</string>
	<string name="autosavename">AUTOSAVE</string>
	<string name="msg_marked">Marked \'%1$s\'</string>
	<string name="msg_unmarked">Unmarked \'%1$s\'</string>
	<string name="mg_not_at_a_commandprompt">Not at a commandprompt! Gamestate not saved!</string>
	<string name="title_activity_setting">Settings</string>
	
	<!-- NOTE: Don't translate these! -->
	<string-array name="initial_highlights">
		<item >north</item>
		<item >northeast</item>
		<item >east</item>
		<item >southeast</item>
		<item >south</item>
		<item >southwest</item>
		<item >west</item>
		<item >northwest</item>
		<item >up</item>
		<item >down</item>
		<item >door</item>
		<item >key</item>
		<item >box</item>
		<item >photo</item>
		<item >picture</item>
		
	</string-array>

</resources>